# adventofcode2020

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: rust.yml  static.yml
benchmark-results/Day1 - Part1/binary_search/base/: benchmark.json  estimates.json  raw.csv  sample.json
benchmark-results/Day1 - Part1/binary_search/change/: estimates.json
benchmark-results/Day1 - Part1/binary_search/new/: estimates.json  sample.json  tukey.json
benchmark-results/Day1 - Part1/binary_search/report/: index.html
benchmark-results/Day1 - Part1/for_loop_split_at/base/: estimates.json  raw.csv  sample.json  tukey.json
benchmark-results/Day1 - Part1/for_loop_split_at/change/: estimates.json
benchmark-results/Day1 - Part1/for_loop_split_at/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
benchmark-results/Day1 - Part1/for_loop_split_at/report/: index.html
benchmark-results/Day1 - Part1/report/: index.html
benchmark-results/Day1 - Part2/report/: index.html
benchmark-results/Day10 - Part2/report/: index.html
benchmark-results/Day13 - Part2/report/: index.html
benchmark-results/Day3 - Part2/report/: index.html
benchmark-results/Generator Day1/report/: index.html
benchmark-results/Generator Day3/report/: index.html
benchmark-results/report/: index.html
src/: lib.rs  main.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/utils/: mod.rs
(+501 files in other folders)
