[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Erwin Kroon <erwin@k3n.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[lib]
bench = false

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
lexical = "6.1.1"
regex = "1.8.4"
regex-macro = "0.2.0"
ring-algorithm = "0.7.0"
serde_scan = "0.4.1"

